<resources>
    <string name="app_name">TallyFlash</string>
    <string name="ip_address">IP-address:</string>
    <string name="port">Port:</string>
    <string name="connect">Connect</string>
    <string name="settings">Settings</string>

    <string name="def_ip">192.168.0.101</string>
    <string name="def_port">8088</string>
    <string name="retry">Retry</string>

    <string name="wrong_ip">"Wrong IP-address."</string>
    <string name="wrong_port">"Wrong port."</string>
    <string name="connection_error">Failed connect to %1$s:%2$s</string>
    <string name="error">Error</string>
    <string name="notification_message">Select scene to start working…</string>
    <string name="shared_main">main_settings</string>


</resources>